
//#################################################################################################
//
// Definition file for the personal workouts (0x00B1nnnn, 0x00B2nnnn, 0x00B3nnnn) files
//
//#################################################################################################

syntax = "proto2";

package tutorial;

option java_package = "net.studioblueplanet.tomtomwatch";
option java_outer_classname = "TrackerProto";

//#################################################################################################
// Root message
//#################################################################################################
message Root
{
  repeated RootContainer        rootContainer =1;
}

//#################################################################################################
// 1st level: root container
//#################################################################################################
message RootContainer
{
  optional Metadata             metadata          =7;
  optional DataContainer        dataContainer     =8;
}

//#################################################################################################
// 2nd level: metadata. Containing just two ints having the same value. Occurs often in one file
//#################################################################################################

message Metadata
{
  required fixed32              manufacturer      =1;  // always 0x1234DAEB
  required fixed32              fileType          =2;  // 0x00010100 for 0x00BE0000
}


//#################################################################################################
// 2nd level: data container. Contains various types of data
//#################################################################################################

message DataContainer
{
  required SubDataContainer     subDataContainer  =1; 
}

//#################################################################################################
// 3rd level: sub data container
//#################################################################################################


message SubDataContainer
{
  optional DeviceInfo           deviceInfo        =1;   // Device info
  optional TrackRecord          trackRecord       =2;   // activity tracking (calories, steps, hr, sleep, etc)
  optional Record2              record2           =3;   // ?
  optional Record6              record6           =5;   // ?
  optional HeartRecord          heartRecord       =6;   // Heart rate
  optional Record4              record4           =7;   // ?
  optional FitnessRecord        fitnessRecord     =9;   // TomTom FitnessPoints counters
}

//#################################################################################################
// 4th level: Device info
//#################################################################################################

message DeviceInfo
{
  required string               deviceName        =1;
  required fixed32              year              =2;
  required SoftwareVersion      softwareVersion   =3;
}

message SoftwareVersion
{
  required int32                majorVersion      =1;
  required int32                mediumVersion     =2;
  required int32                minorVersion      =3;
  required Unknown01            unknown01         =4;
  optional Unknown02            unknown02         =5; // 1.6.26
}


message Unknown01
{
  optional int32                dummy             =1;  
}


message Unknown02
{
  optional int32                dummy             =1;  
}


//#################################################################################################
// 4th level: Tracker Record
//#################################################################################################
message TrackRecord
{  
  required int32                recordId          =1;
  required int32                time              =2;    // Epoch time in seconds, 900 s interval = 15 min
  required int32                timeZone          =3;    // Difference between time and UTC in seconds (?)
  required int32                interval          =4;    // Interval of this measurement = 900s often     
  required int32                steps             =5;    // steps
  required int32                active            =6;    // active time in seconds
  required int32                distance          =7;    // distance in m
  required int32                kcal              =8;    // kcal
  required int32                kcalRest          =9;    // kcal in rest? (~12 kcal/10 min) 
  required int32                unknown1          =11;   // 0
  optional int32                sleepTime         =12;   // sleep time in seconds. 
  optional int32                sleepMode         =13;   // 1: active, 2: charging? 3: 1st hour sleep 4: sleep
                                                         // Total sleep time: sum sleep time if sleepMode=3 or 4
                                                         // from 12:00:00 till 12:00:00
}


//#################################################################################################
// 4th level: Data Record 2
//#################################################################################################

message Record2
{
  required fixed32              time              =1;    // Epoch time in seconds, 900 s interval = 15 min
  required int32                interval          =2;    // Interval in seconds? 14400=4h
  repeated TagValueContainer    tagValue          =3;
  required int32                unknown1          =4;
  required int32                unknown2          =5;
  optional int32                unknown3          =6;
  optional fixed32              unknown4          =104;  // 1.6.26

}

message TagValueContainer
{
  required int32                tag               =1;
  required ValueContainer       valueContainer    =2;
}

message ValueContainer
{
  required int32                value             =3;
}

//#################################################################################################
// 4th level: Data Record 3 - heart rate
//#################################################################################################

message HeartRecord
{
  required fixed32              time              =1;    // Epoch time in seconds, 900 s interval = 15 min
  required int32                interval          =2;    // Interval in seconds?? 14400=4h
  required int32                heartRate         =3;    // Heartrate in bpm. This value is displayed by TomTom MySports
  required int32                value01           =4;    // Some other heartrate value
  required int32                value02           =5;    // ?
}


//#################################################################################################
// 4th level: Data Record 4
//#################################################################################################

message Record4
{
  required fixed32              time              =1;    // Epoch time in seconds, 900 s interval = 15 min
  required int32                interval          =2;    // Interval in seconds?? 14400=4h or 14280=3h58'???
  repeated int32                value             =3;    // 6 values in the message
}

//#################################################################################################
// 4th level: Data Record 5
//#################################################################################################

// Occurs every 120 seconds when logging activity

message UserData
{
  required string               version           =1;
  required int32                unknown1          =2;                
  required int32                unknown2          =3;                
  required int32                unknown3          =4;                
  required int32                length            =5;  // Users heigth in cm 
  required int32                weight            =6;  // User weight              
  required int32                unknown4          =7;                
  required int32                unknown5          =8;                
  required int32                unknown6          =9;                
  required int32                unknown7          =10;                
  required int32                unknown8          =11;                
  required int32                unknown9          =12;                
  required int32                unknown10         =13;                
  required int32                unknown13         =16;                
  required int32                unknown14         =17;                
  required int32                unknown15         =18;           
  required int32                unknown16         =19;
}

message FitnessRecord
{
  required int32                time              =2;    // Epoch time in seconds, 120 s interval = 2 min during activity
  required int32                interval          =3;    // Interval in seconds?? 14280=238 min = 3h58'??
  optional UserData             userData          =5;    // User data
  optional int32                unknown1          =7;                
  optional int32                unknown2          =8;                
  optional int32                unknown3          =10;                
  optional int32                unknown4          =11;                
  optional int32                unknown5          =12;                
  required int32                fitnessPoints1    =15;  // Cummulative TomTom activity points counter
  required int32                fitnessPoints2    =16;  // Cummulative TomTom activity points counter

}

//#################################################################################################
// 4th level: Data Record 6
//#################################################################################################

message Record6Sub
{
  required int32                unknown1          =1;                
  required int32                unknown2          =2;                
  required int32                unknown3          =3;                
}

message Record6
{
  required int32                time              =1;    // Epoch time in seconds, 900 s interval = 15 min
  required int32                interval          =2;    // Interval in seconds?? 14280=238 min = 3h58'??
  required int32                unknown1          =3;                
  repeated Record6Sub           sub               =4;    // Some data
}



